# AWV-MOS

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params_kitti.yaml  params_kitti_weather.yaml  params_nuscenes.yaml  params_urbanloco.yaml
config/rviz/: scan_view.rviz  scan_view_nuscenes.rviz
include/: AWV_MOS.h
launch/: evaluation.launch  run_online_mos_nuscenes.launch  run_online_mos_w_lio_kitti.launch  run_online_mos_w_lio_urbanloco.launch  run_static_mapping.launch
src/: AWV_MOS.cpp  FeatureExtractionModule.cpp  mapOptmization.cpp  mos_evaluation.cpp  run_online_mos.cpp  run_static_mapping.cpp
tools/: kittiraw2bag.py  write_poses.py
